# natural_satellites_visualiser

./: Cargo.toml  README.md  satellites.json  satellites_human_readable.json
input/: orbits.txt  physical.txt  satellites.json
satellite_data/: Cargo.toml
satellite_data/src/: database.rs  lib.rs  satellites.rs
satellite_data/src/data/: astronomical_data.rs  data_with_error.rs  mod.rs
src/: astronomy_canvas.rs  main.rs
