[package]
name = "satellites"
version = "0.1.0"
authors = ["zggff <gigamaximwachau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satellite_data = {path = "satellite_data"}
druid = { git = "https://github.com/linebender/druid.git" }
evalexpr = "6.6.0"
lazy_static = "1.4.0"