[package]
name = "natural_satellites_visualiser"
version = "0.1.0"
authors = ["zggff<gigamaximwachau@gmail.com>"]
edition = "2021"
repository = "https://github.com/zggff/natural_satellites_visualiser"
rpage = "https://github.com/zggff/natural_satellites_visualiser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satellite_data = {path = "satellite_data"}
druid = { git = "https://github.com/linebender/druid.git" }
evalexpr = "6.6.0"
lazy_static = "1.4.0"